# ChangeLog for dev-ruby/minitest
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.163 2014/08/25 05:32:44 graaff Exp $

*minitest-5.4.0 (25 Aug 2014)

  25 Aug 2014; Hans de Graaff <graaff@gentoo.org> +minitest-5.4.0.ebuild:
  Version bump.

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> minitest-4.7.5.ebuild:
  sparc stable, bug #493780

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> minitest-5.3.3.ebuild:
  sparc stable wrt #505920

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> minitest-4.7.4.ebuild,
  minitest-4.7.5-r1.ebuild, minitest-4.7.5.ebuild, minitest-5.3.3-r1.ebuild,
  minitest-5.3.3.ebuild, minitest-5.3.4.ebuild, minitest-5.3.5.ebuild:
  Remove trailing '.' from DESCRIPTION.

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org> minitest-5.3.3.ebuild:
  Stable on alpha, bug #505920

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org> minitest-5.3.3.ebuild:
  Stabilize minitest-5.3.3 on alpha

  18 Jul 2014; Manuel Rüger <mrueg@gentoo.org> minitest-5.3.3.ebuild:
  Stable on amd64. Bug #505920.

  14 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> minitest-5.3.3.ebuild:
  x86 stable wrt bug #505920

  02 Jul 2014; Manuel Rüger <mrueg@gentoo.org> minitest-4.7.5.ebuild:
  Stable on amd64. Bug #508996

  02 Jul 2014; Tobias Klausmann <klausman@gentoo.org> minitest-4.7.5.ebuild:
  Stable on alpha, bug #508996

*minitest-5.3.5 (21 Jun 2014)

  21 Jun 2014; Hans de Graaff <graaff@gentoo.org> +minitest-5.3.5.ebuild:
  Version bump.

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> minitest-4.7.5.ebuild:
  x86 stable wrt bug #508996

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org> minitest-5.3.3.ebuild:
  Stable for HPPA (bug #505920).

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> minitest-4.7.5.ebuild:
  ia64 stable wrt bug #508996

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> minitest-5.3.3.ebuild:
  ia64 stable wrt bug #505920
