@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/minitest
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.163 2014/08/25 05:32:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.164 2014/08/30 10:19:57 mrueg Exp $
+
+*minitest-5.4.1 (30 Aug 2014)
+
+  30 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +minitest-5.4.1.ebuild,
+  -minitest-5.3.4.ebuild, -minitest-5.3.5.ebuild, -minitest-5.4.0.ebuild:
+  Version bump. Cleanup old.
 
 *minitest-5.4.0 (25 Aug 2014)
 
